force-app/main/default/objects/Job_Account__c/Job_Account__c.object-meta.xml
<CustomObject>
    <description>Accounts Related to a Job</description>
    <label>Job Account</label>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>Job Account ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>