force-app/main/default/objects/Job_Account__c/fields/ATI_Job__c.field-meta.xml
<CustomField>
    <fullName>ATI_Job__c</fullName>
    <label>ATI Job</label>
    <referenceTo>ATI_Job__c</referenceTo>
    <relationshipLabel>Job Accounts</relationshipLabel>
    <relationshipName>Job_Accounts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>