force-app/main/default/objects/Job_Account__c/fields/Job_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Account_Name__c</fullName>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Account Name</label>
    <type>Text</type>
</CustomField>