force-app/main/default/objects/Job_Account__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to Opportunity object</description>
    <label>Job</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Job Accounts</relationshipLabel>
    <relationshipName>Job_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>